hello-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: "2022-01-11T03:47:38Z"
  labels:
    app: hello
    app.kubernetes.io/component: hello
    app.kubernetes.io/instance: hello
    app.kubernetes.io/name: hello
    app.kubernetes.io/part-of: hello
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-el7
  name: hello
  namespace: demo
  resourceVersion: "19734812"
  uid: a7d936dc-6f20-46d4-a43f-ae0613c87060
spec:
  host: hello-demo.apps.ocp1.poc.isd.th.ibm.com
  path: /hello
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: hello
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2022-01-11T03:47:38Z"
      status: "True"
      type: Admitted
    host: hello-demo.apps.ocp1.poc.isd.th.ibm.com
    routerCanonicalHostname: router-default.apps.ocp1.poc.isd.th.ibm.com
    routerName: default
    wildcardPolicy: None
