hello-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/jacky9999999/demo.git
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: "2022-01-11T03:47:38Z"
  labels:
    app: hello
    app.kubernetes.io/component: hello
    app.kubernetes.io/instance: hello
    app.kubernetes.io/name: hello
    app.kubernetes.io/part-of: hello
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-el7
  name: hello
  namespace: demo
  resourceVersion: "19734801"
  uid: fe31ad3c-0c60-40ad-81e4-17be33627006
spec:
  clusterIP: 10.105.164.115
  clusterIPs:
  - 10.105.164.115
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: hello
    deploymentconfig: hello
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
